k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
  namespace: pida-diego
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  strategy: {}
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/pida-diego/app:f3113786-265e-4c11-845a-0008f7aa3f3e image-registry.openshift-image-registry.svc:5000/pida-diego/app:0f43ec7b-e056-4d35-ad9c-2ace065216ef
          name: app
          ports:
          - containerPort: 8080
          resources: {}
